@@ -1,0 +1,9 @@
+^blib/
+^MANIFEST\.bak$
+^Makefile$
+^Makefile\.old$
+^pm_to_blib$
+^\.git/
+^\.gitignore$
+^dist\.ini$
+^MYMETA
