@@ -1,6 +1,7 @@
 Revision history for Template::Plugin::Map
 
 {{$NEXT}}
+    - add signature author test
 
 0.02  2014-04-01
     - remove Module::Signature requirement
